--- a/finalProject/public/style.css
+++ b/finalProject/public/style.css
@@ -4,8 +4,14 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #f6fbfc;
+  min-height: 100vh;
+  background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)),
+    url(https://github.com/john-smilga/javascript-basic-projects/blob/master/10-scroll/final/hero-bcg.jpeg?raw=true)
+      center/cover no-repeat;
 }
+/* body {
+  background-color: #f6fbfc;
+} */
 /*              Header                  */
 header {
   display: flex;
@@ -25,25 +31,46 @@ header.rmkLogo2 {
 }
 
 /*              Nav bar                  */
+#nav-toggle-button {
+  margin-left: 1rem;
+}
+/* ul {
+  display: flex;
+  justify-content: space-evenly;
+} */
 
-.navbar-nav a {
-  margin: 0 4rem;
+.navbar-nav li a {
+  margin-right: 8rem;
   font-size: 1.2rem;
 }
 .navbar-nav a:hover {
   font-size: 1.22rem;
   transition: 0.3s;
 }
-
+#nav-ul {
+  margin-right: 0 -4rem;
+}
 /*             date-picker                  */
 
-/* #inputBox {
-  width: 40%;
-} */
+#date-form {
+  border: 3px solid black;
+  background-color: white;
+  color: black;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+#val-btn,
+#refresh-btn {
+  padding: 0.2rem;
+  border-radius: 0.5rem;
+}
+
 /*             Sensor Box                 */
 
 .box-1 {
   border: 3px solid black;
+  background-color: white;
+  color: black;
   padding: 0.5rem;
   width: 20%;
   height: 20%;
@@ -68,9 +95,11 @@ header.rmkLogo2 {
   display: flex;
   justify-content: space-between;
 }
-/* .table-box {
-  width: 50%;
-} */
+.average-reading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /*             Media                  */
 
 @media only screen and (max-width: 1000px) {
@@ -82,6 +111,10 @@ header.rmkLogo2 {
   }
   .box-1 h2 a {
     font-size: 1rem;
+  }
+  .navbar-nav li a {
+    margin: 0 4rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -101,6 +134,9 @@ header.rmkLogo2 {
   .box-1 {
     width: 40%;
   }
+  /* #average-reading-h4 {
+    font-size: 1rem;
+  } */
 }
 
 @media only screen and (max-width: 505px) {
